# Contract-Intelligence

./: .dockerignore  .gitignore  CLAUDE.md  CODEBASE_ARCHITECTURE_REPORT.txt  Demo_Link.txt  LICENSE  README.md  debug_splitter.py  demo_pipeline.py  main.py  pyproject.toml
.claude/agents/: celery-agent.md  database-agent.md  fastapi-agent.md  frontend-agent.md  langgraph-agent.md  llm-pipeline-agent.md  qa-agent.md
.claude/skills/: add-clause-type.md  db-health.md  review-security.md  scaffold-module.md  test-pipeline.md
.github/workflows/: ci.yml  qa-merge-check.yml
contracts_platform/api/: dependencies.py  main.py
contracts_platform/api/middleware/: logging_middleware.py  rate_limit_middleware.py
contracts_platform/api/routers/: admin.py  auth.py  clauses.py  contracts.py  users.py  webhooks.py
contracts_platform/api/schemas/: admin.py  auth.py  clause.py  contract.py  user.py
contracts_platform/auth/: api_key_manager.py  jwt_handler.py  oauth2.py  rbac.py
contracts_platform/core/: config.py  constants.py  encryption.py  exceptions.py  logging.py  security.py  tracing.py
contracts_platform/db/mongodb/: client.py  models.py
contracts_platform/db/neo4j/: client.py
contracts_platform/db/postgresql/: client.py  models.py
contracts_platform/db/qdrant/: client.py  collections.py  embedding_registry.py
contracts_platform/file_handling/: duplicate_detector.py  storage.py  temp_storage.py  validator.py
contracts_platform/notifications/: websocket_manager.py
contracts_platform/orchestration/: graph.py  state.py
contracts_platform/orchestration/checkpoints/: redis_checkpointer.py
contracts_platform/orchestration/nodes/: explainability_node.py  gap_analysis_node.py  graph_check_node.py  intent_extraction_node.py  playbook_check_node.py  playbook_score_node.py  precedent_check_node.py  recommendation_node.py  risk_aggregator_node.py  vector_check_node.py
contracts_platform/orchestration/scoring/: risk_calculator.py  weights.py
contracts_platform/pipeline/: cost_tracker.py  embedder.py  playbook_extractor.py  playbook_similarity.py
contracts_platform/pipeline/clause_extraction/: extractor.py  fallback_parser.py  missing_clause_detector.py  validator.py
contracts_platform/pipeline/ocr/: confidence.py  extractor.py  splitter.py  table_extractor.py
contracts_platform/pipeline/party_extraction/: __init__.py  extractor.py  normalizer.py
contracts_platform/pipeline/recommendation/: fix_suggester.py  generator.py  wording_retriever.py
contracts_platform/workers/: celery_app.py  dead_letter.py  progress_tracker.py  queues.py  retry_policy.py
contracts_platform/workers/tasks/: clause_extraction_task.py  cleanup_task.py  ingest_task.py  ocr_task.py  post_decision_task.py  qdrant_check_task.py  (+2 more)
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.test.yml  docker-compose.yml
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: create_structure.py  init_neo4j_schema.py  init_qdrant_collections.py  seed_admin_user.py  seed_playbook_rules.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_db_repositories.py  test_langgraph_orchestration.py
tests/unit/: test_api_db_errors.py  test_clause_validator.py  test_duplicate_detector.py  test_file_validator.py  test_jwt_handler.py  test_mongodb_client.py  test_neo4j_contract_graph.py  test_party_extraction.py  test_risk_calculator.py
(+49 files in other folders)
