[project]
name = "contract-platform"
version = "0.1.0"
description = "Legal Contract Intelligence & Review Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Databases
    "motor>=3.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "qdrant-client>=1.9",
    "neo4j>=5.20",
    # Task queue
    "celery[redis]>=5.4",
    "redis>=5.0",
    # LLM / AI
    "langchain>=0.2",
    "langgraph>=0.1",
    "openai>=1.30",
    # Document processing
    "pypdf>=4.0",
    "python-docx>=1.1",
    # Azure services
    "azure-ai-formrecognizer>=3.3",
    "azure-storage-blob>=12.19",
    "azure-storage-file-share>=12.15",
    "azure-monitor-opentelemetry>=1.2",
    # Validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Auth / Security
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=3.2,<4.0",
    "cryptography>=42.0",
    # Logging
    "structlog>=24.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "bandit>=1.7",
    "httpx>=0.27",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
